Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36987

Log line "Server socket created on IP" is ambiguous due to missing port information

    XMLWordPrintable

Details

    • Notable changes
    • Clarify "Server socket created on IP" messages at startup to include the port number, otherwise there where duplicate messages combined with extra_port configuration.

    Description

      If we start MariaDB we see this output:

      2025-06-10 22:23:43 0 [Note] Starting MariaDB 11.4.7-MariaDB-ubu2204-log
      2025-06-10 22:23:44 0 [Note] InnoDB: Compressed tables use zlib 1.2.11
      2025-06-10 22:23:44 0 [Note] InnoDB: Number of transaction pools: 1
      2025-06-10 22:23:44 0 [Note] InnoDB: Using AVX512 instructions
      2025-06-10 22:23:44 0 [Note] InnoDB: Using liburing
      2025-06-10 22:23:44 0 [Note] InnoDB: innodb_buffer_pool_size_max=307200m, innodb_buffer_pool_size=307200m
      2025-06-10 22:23:46 0 [Note] InnoDB: Completed initialization of buffer pool
      2025-06-10 22:23:47 0 [Note] InnoDB: File system buffers for log disabled (block size=4096 bytes)
      2025-06-10 22:23:47 0 [Note] InnoDB: End of log at LSN=53769407658166
      2025-06-10 22:23:47 0 [Note] InnoDB: Opened 3 undo tablespaces
      2025-06-10 22:23:47 0 [Note] InnoDB: 128 rollback segments in 3 undo tablespaces are active.
      2025-06-10 22:23:48 0 [Note] InnoDB: Setting file './ibtmp1' size to 12.000MiB. Physically writing the file full; Please wait ...
      2025-06-10 22:23:48 0 [Note] InnoDB: File './ibtmp1' size is now 12.000MiB.
      2025-06-10 22:23:48 0 [Note] InnoDB: log sequence number 53769407658166; transaction id 136341592369
      2025-06-10 22:23:48 0 [Note] InnoDB: Loading buffer pool(s) from /var/lib/mysql/ib_buffer_pool
      2025-06-10 22:23:48 0 [Note] Plugin 'FEEDBACK' is disabled.
      2025-06-10 22:23:48 0 [Note] Plugin 'wsrep-provider' is disabled.
      2025-06-10 22:23:49 0 [Note] Server socket created on IP: '0.0.0.0'.
      2025-06-10 22:23:49 0 [Note] Server socket created on IP: '0.0.0.0'.
      2025-06-10 22:23:49 0 [Note] mariadbd: Event Scheduler: Loaded 0 events
      2025-06-10 22:23:49 0 [Note] /usr/sbin/mariadbd: ready for connections.
      

      There are "duplicate" line two times:
      2025-06-10 22:23:49 0 [Note] Server socket created on IP: '0.0.0.0'.
      In reality it's not duplicate, because, we have MariaDB listening on 2 ports (3306 + "extra_port" for emergency usage), I believe, we should edit this message for example like this:
      2025-06-10 22:23:49 0 [Note] Server socket created on IP: '0.0.0.0', port 'XXX'.
      OR
      2025-06-10 22:23:49 0 [Note] Server socket created on IP: '0.0.0.0:XXX'.

      MariaDB 11.4.7, Ubuntu 22.04 LTS, Kernel 5.15/6.8

      Attachments

        Activity

          People

            danblack Daniel Black
            shaim Dominik Shaim
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: