MDEV-36987 Add port information to server socket creation log message

Add port information to server socket creation log message to improve
clarity when multiple ports are in use (e.g., default port 3306 and
extra_port). Previously, the message only showed "Server socket created
on IP: '[IP]'" without port information, making it ambiguous. The
modified message now includes the port number: "Server socket created on
IP: '[IP]', port: '[PORT]'".

All new code of the whole pull request, including one or several files
that are either new files or modified ones, are contributed under the
BSD-new license. I am contributing on behalf of my employer Amazon Web
Services, Inc.